<resources>
    <string name="app_name">MyMoney</string>
    <string name="yes">MyMoney</string>
    <string-array name="amountType_array">
        <item>Cash</item>
        <item>Bank</item>
        <item>ICICI Bank</item>
        <item>Axis Bank</item>
        <item>Allahabad Bank</item>
        <item>SBI Bank</item>
        <item>ICICI Credit Card</item>
        <item>CITI Credit Card</item>
        <item>Savings</item>
        <item>Post Office</item>
        <item>TicketRestuarent Card</item>
    </string-array>

    <string-array name="categorytType_array">
        <item>Home</item>
        <item>Home Rent</item>
        <item>Bill Payments</item>
        <item>CarLoan</item>
        <item>Food</item>
        <item>Hyd Power Bill</item>
        <item>Ndl Power Bill</item>
        <item>Net Bill</item>
        <item>Movie</item>
        <item>Petrol</item>
        <item>ATM Withdrawal</item>
        <item>Online Transfer</item>
        <item>Others</item>
        <item>ICICI Credit Card</item>
        <item>CITI Credit Card</item>
        <item>Traveling</item>
        <item>NdlCon</item>

    </string-array>
    <string-array name="filterTypes_array">
        <item>Select SearchType..</item>
        <item>Source Type</item>
        <item>Category</item>
        <item>Transaction Type</item>
        <item>Description</item>

    </string-array>

    <string-array name="MonthYear_array">
        <item>All</item>
    </string-array>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="title_activity_main_bottom">mainBottomActivity</string>

    <string name="title_export">Export</string>
    <string name="title_summaryList">Summary</string>
    <string name="title_setting">Settings</string>
    <string name="title_balancechart">BalanceChart</string>
    <string name="title_expenseChart">ExpenseChart</string>
    <string name="title_activity_accounts_view">AccountsViewActivity</string>
    <string name="search_month">Search Month</string>
    <string name="filtertype">FilterType</string>
    <string name="enter_search_item">Enter search Item</string>
</resources>